# backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  error.rs  lib.rs  main.rs  security.rs  state.rs
src/api/: health.rs  mod.rs  rooms.rs
src/auth/: mod.rs
src/mail/: mod.rs  resend.rs
src/media/: gateway.rs  mod.rs  track_forwarder.rs
src/models/: mod.rs  room.rs  user.rs
src/redis/: mod.rs  room_repository.rs
src/ws/: handler.rs  messages.rs  session.rs
