[package]
name = "truegather-backend"
version = "0.1.0"
edition = "2021"
authors = ["TrueGather Team"]
description = "Secure video conferencing backend with WebRTC support"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# WebRTC
webrtc = "0.14"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.18"

# Authentication
jsonwebtoken = "9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto (for TURN credentials)
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# Concurrent collections
dashmap = "6"

# HTTP client (for health checks)
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
